# backend/config/swagger.json
@@ -10,20 +10,166 @@
       "bearerAuth": {
         "type": "http",
         "scheme": "bearer"
+      },
+      "googleOauth2": {
+        "type": "oauth2",
+        "flows": {
+          "authorizationCode": {
+            "authorizationUrl": "https://accounts.google.com/o/oauth2/auth",
+            "tokenUrl": "https://oauth2.googleapis.com/token",
+            "scopes": {
+              "email": "Access to your email address",
+              "profile": "Access to your basic profile info"
+            }
+          }
+        }
+      },
+      "facebookOauth2": {
+        "type": "oauth2",
+        "flows": {
+          "authorizationCode": {
+            "authorizationUrl": "https://www.facebook.com/v10.0/dialog/oauth",
+            "tokenUrl": "https://graph.facebook.com/v10.0/oauth/access_token",
+            "scopes": {
+              "email": "Access to your email address",
+              "public_profile": "Access to your publis profile information"
+            }
+          }
+        }
       }
     }
   },
-  "security": [
-    {
-      "bearerAuth": []
-    }
-  ],
   "paths": {
+    "/auth/google": {
+      "get": {
+        "summary": "Google OAuth Login",
+        "description": "Redirects the user to Google for OAuth login.",
+        "tags": ["Social signup"],
+        "security": [],
+        "responses": {
+          "302": {
+            "description": "Redirect to Google authentication page."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
+    "/auth/google/callback": {
+      "get": {
+        "summary": "Google OAuth Callback",
+        "description": "Handles the callback after Google OAuth authentication.",
+        "tags": ["Social signup"],
+        "security": [
+          {
+            "googleOauth2": ["email", "profile"]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully authenticated."
+          },
+          "400": {
+            "description": "Authentication failure."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
+    "/auth/facebook": {
+      "get": {
+        "summary": "Facebook OAuth Login",
+        "description": "Redirects the user to Facebook for OAuth login.",
+        "tags": ["Social signup"],
+        "security": [],
+        "responses": {
+          "302": {
+            "description": "Redirect to facebook authentication page."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
+    "/auth/facebook/callback": {
+      "get": {
+        "summary": "Facebook OAuth Callback",
+        "description": "Handles the callback after Facebook OAuth authentication.",
+        "tags": ["Social signup"],
+        "security": [
+          {
+            "facebookOauth2": ["email", "public_profile"]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully authenticated."
+          },
+          "400": {
+            "description": "Authentication failure."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
+    "/set-password": {
+      "post": {
+        "summary": "Set password",
+        "description": "Allows a user to set a new password using a temporary password.",
+        "tags": ["Social signup"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "userId": { "type": "string", "example": "12345" },
+                  "tempPassword": { "type": "string", "example": "TempPass123!" },
+                  "password": { "type": "string", "example": "NewPassword123!"}
+                },
+                "required": ["userId", "tempPassword", "password"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Password successfully set."
+          },
+          "400": {
+            "description": "Invalid inout or temporary password."
+          },
+          "404": {
+            "description": "User not found."
+          },
+          "500": {
+            "description": "Internal server error."
+          }
+        }
+      }
+    },
     "/verify-email" : {
       "post": {
         "summary": "Initiate email verification for user registration",
         "description": "Sends a verification code to the user's email. This endpoint requires the user's email, fullname, password and username.",
         "tags": ["Authentication"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -59,6 +205,11 @@
         "summary": "Sign up a new user",
         "description": "Create a new user account",
         "tags": ["Authentication"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -71,9 +222,7 @@
                   "age": { "type": "integer", "example": 30 },
                   "gender": { "type": "string", "example": "male" },
                   "country": { "type": "string", "example": "USA" },
-                  "preferredLanguage": { "type": "string", "example": "English" },
-                  "height": { "type": "number", "format": "float", "example": 1.75 },
-                  "weight": { "type": "number", "format": "float", "example": 70 }
+                  "preferredLanguage": { "type": "string", "example": "English" }
                 },
                 "required": ["email", "verificationCode"]
               }
@@ -92,6 +241,11 @@
         "summary": "Log in a user",
         "description": "Authenticate a user and return a token.",
         "tags": ["Authentication"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -130,6 +284,11 @@
         "summary": "Refresh the authentication token",
         "description": "Refresh the user's token if it is about to expire.",
         "tags": ["Authentication"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -173,6 +332,11 @@
         "summary": "Logs out the user",
         "description": "Logs out the user and removes the authenticated tokens from Redis.",
         "tags": ["Authentication"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -204,6 +368,11 @@
         "summary": "Request a password reset",
         "description": "Generates a password reset code and sends it to the user's email.",
         "tags": ["Authentication"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -234,6 +403,11 @@
         "summary": "Reset the password",
         "description": "Reset the user's password using the reset code.",
         "tags": ["Authentication"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -290,8 +464,6 @@
                     "age": { "type": "integer" },
                     "gender": { "type": "string" },
                     "country": { "type": "string" },
-                    "height": { "type": "number", "format": "float" },
-                    "weight": { "type": "number", "format": "float" },
                     "preferredLanguage": { "type": "string" },
                     "last_updated_at": { "type": "string", "format": "date-time" },
                     "created_at": { "type": "string", "format": "date-time" }
@@ -345,18 +517,6 @@
                     "description": "The user's country",
                     "example": "USA"
                   },
-                  "height": {
-                    "type": "number",
-                    "format": "float",
-                    "description": "The user's height",
-                    "example": 180.5
-                  },
-                  "weight": {
-                    "type": "number",
-                    "format": "float",
-                    "description": "The user's weight",
-                    "example": 75.3
-                  },
                   "preferredLanguage": {
                     "type": "string",
                     "description": "The user's preferred language",
@@ -384,8 +544,6 @@
                         "age": { "type": "integer", "example": 30 },
                         "gender": { "type": "string", "example": "male" },
                         "country": { "type": "string", "example": "USA" },
-                        "height": { "type": "number", "format": "float", "example": 180.5 },
-                        "weight": { "type": "number", "format": "float", "example": 75.3 },
                         "preferredLanguage": { "type": "string", "example": "English" },
                         "last_updated_at": { "type": "string", "format": "date-time" },
                         "created_at": { "type": "string", "format": "date-time" }
